removed getLast and removeLast